syntax = "proto3";
package pb;

message SimpleRequest{
    // 定义发送的参数，采用驼峰命名方式，小写加下划线，如：student_name
    string data = 1;//发送数据
}

message SimpleResponse{
    // 定义接收的参数
    // 参数类型 参数名 标识号(不可重复)
    int32 code = 1;  //状态码
    string value = 2;//接收值
}

// 定义我们的服务（可定义多个服务,每个服务可定义多个接口）
service Simple{
    rpc Route (SimpleRequest) returns (SimpleResponse){};
    rpc GetSum (SumRequest) returns (SumResponse){};
}

message SumRequest{
    int32 number1 = 1;
    int32 number2 = 2;
}
message SumResponse{
    repeated int32 sum = 1;
    repeated string names = 2;
}